Update Huichan Seo profile

--- a/src/content/docs/people.mdx
+++ b/src/content/docs/people.mdx
@@ -149,6 +149,12 @@ import Person from '../../components/Person.astro'
       href="https://acanvil.com/"
       description="Research Associate I"
     />
+    <Person
+      photo="chan"
+      title="Huichan Seo"
+      href="https://www.linkedin.com/in/huichan-seo-443173265/"
+      description="Research Associate I"
+    />
     <div style="min-height: 0 !important;"></div>{' '}
     {/* empty div to left justify cards */}
   </CardGrid>
